Huge organization fix + align icons adding spans

--- a/style.css
+++ b/style.css
@@ -93,7 +93,13 @@ body{
     align-items: center;
 }
 .sidebar ul li i {
+    display: flex;
     margin-right: 10px;
+    align-items: left;
+  }
+  .sidebar ul li span {
+    display: flex;
+    align-items: center;
   }
 .main {
     margin-left: 10px;
